--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -12,6 +12,7 @@
       - controller
       - compute
       - cinder
+      - mongo
     roles_metadata:
       controller:
         name: "Controller"
@@ -26,6 +27,12 @@
       cinder:
         name: "Storage - Cinder LVM"
         description: "Cinder LVM provides block storage over iSCSI. Block storage can be used for database storage, expandable file systems, or providing a server with access to raw block level devices."
+      mongo:
+        name: "MongoDB"
+        description: "Storage - MongoDB for Ceilometer"
+        conflicts:
+          - compute
+        depends_on: "editable.additional_components.ceilometer.value"
     networks_metadata:
       nova_network:
         networks:
@@ -93,6 +100,12 @@
         cinder:
           - {allocate_size: "min", id: "os"}
           - {allocate_size: "all", id: "cinder"}
+        mongo:
+          - {allocate_size: "min", id: "os"}
+          - {allocate_size: "all", id: "vm"}
+        mongo-primary:
+          - {allocate_size: "min", id: "os"}
+          - {allocate_size: "all", id: "vm"}
         other:
           - {allocate_size: "all", id: "os"}
       volumes:
