--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -15,6 +15,7 @@ FIXTURES_TO_UPLOAD:
   - "openstack.json"
   - "start_notification.json"
   - "admin_network.json"
+  - "fencing.json"
 
 DATABASE:
   engine: "postgresql"
