--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -224,7 +224,7 @@
             type: "text"
         syslog:
           syslog_transport:
-            value: "udp"
+            value: "tcp"
             values:
               - data: "udp"
                 label: "UDP"
