Make Admin and Public non-dedicated.
Change-Id: Ic3383a2da87a34259463c2a2c97d05b20a7fc998

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -347,7 +347,7 @@
             render_type: null
             render_addr_mask: null
             map_priority: 2
-            dedicated_nic: true
+            allow_2nd_untagged: true
             assign_vip: false
         config:
           parameters:
