--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -4,11 +4,11 @@ Paste==1.7.5.1
 PyYAML==3.10
 SQLAlchemy==0.7.8
 amqplib==1.0.2
-anyjson==0.3.1
+anyjson>=0.3.1
 argparse==1.2.1
 decorator==3.4.0
 iso8601==0.1.8
-kombu==2.1.8
+kombu>=2.1.8
 netaddr==0.7.10
 netifaces==0.8
 oslo.config==1.2.1
