--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -174,6 +174,12 @@
             description: "Debug logging mode provides more information, but requires more disk space."
             weight: 20
             type: "checkbox"
+          nova_quota:
+            value: false
+            label: "Nova quotas"
+            description: "Quotas are used to limit CPU and memory usage for tenants. Enabling quotas will increase load on the Nova database."
+            weight: 25
+            type: "checkbox"
           auto_assign_floating_ip:
             value: false
             label: "Auto assign floating IP"
