Add ability to disable entire settings section
Implements: blueprint disable-entire-settings-section
Change-Id: I7a041ed0c9aa25f0477b97874a2dbd263ba51e55

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -143,6 +143,8 @@
     attributes_metadata:
       editable:
         access:
+          metadata:
+            weight: 10
           user:
             value: "admin"
             label: "username"
@@ -168,6 +170,8 @@
             weight: 20
             type: "password"
         common:
+          metadata:
+            weight: 30
           debug:
             value: false
             label: "OpenStack debug logging"
@@ -229,6 +233,8 @@
             weight: 70
             type: "text"
         syslog:
+          metadata:
+            weight: 50
           syslog_transport:
             value: "tcp"
             values:
@@ -254,6 +260,8 @@
             weight: 20
             type: "text"
         storage:
+          metadata:
+            weight: 60
           volumes_lvm:
             value: true
             label: "Cinder LVM over iSCSI for volumes"
@@ -443,6 +451,8 @@
     attributes_metadata:
       editable:
         additional_components:
+          metadata: 
+            weight: 20
           savanna:
             value: false
             label: "Install Savanna"
@@ -543,30 +553,30 @@
     operating_system: "CentOS"
     description: "This option will install the OpenStack Havana packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
-      generated:
-        cobbler:
-          profile:
-            generator_arg: "centos-x86_64"
       editable:
-        common:
-          vlan_splinters:
+        vlan_splinters:
+          metadata:
+            toggleable: true
+            enabled: false
+            weight: 40
+          vswitch:
             value: "disabled"
             label: "Open VSwitch VLAN Splinters feature (Neutron only)"
             weight: 45
             type: "radio"
             values:
-              - data: "disabled"
-                label: "Disabled (Default)"
-                description: "OVS VLAN splinters disabled on all interfaces"
               - data: "soft"
-                label: "Use OVS VLAN splinters soft trunks workaround"
+                label: "Enable OVS VLAN splinters soft trunks workaround"
                 description: "Configure OVS to use VLAN splinters workaround with soft trunk detection. This may resolve issues that might be encountered when using VLAN tags with OVS and Neutron on Kernels <3.3 (CentOS)"
+                type: "radio"
               - data: "hard"
-                label: "Use OVS VLAN splinters hard trunks workaround"
+                label: "Enable OVS VLAN splinters hard trunks workaround"
                 description: "Configure OVS to use VLAN splinters workaround with hard trunk allocation. Offers similar effect as soft trunks workaround, but forces each trunk to be predefined. This may work better than soft trunks especially if you still see network problems using soft trunks"
-              - data: "kernel_lt"
-                label: "EXPERIMENTAL: Use Fedora longterm kernel"
-                description: "Install the Fedora 3.10 longterm kernel instead of the default 2.6.32 kernel. This should remove any need for VLAN Splinters workarounds as the 3.10 kernel has better support for OVS VLANs. This kernel may not work with all hardware platforms, use caution."
+                type: "radio"
+      generated:
+        cobbler:
+          profile:
+            generator_arg: "centos-x86_64"
 - pk: 3
   extend: *full_release
   fields:
