Add more logs to a diagnostic snapshot
Log from Master node:
/var/log/fuelmenu.log
/root/*.log
/etc/cobbler/*

Change-Id: Ia7eab8117560aacb782dafcd602fcf9c794a22db
Closes: bug #1269533

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -470,6 +470,12 @@ DUMP:
         path: /etc/resolv.conf
       - type: file
         path: /etc/dnsmasq.conf
+      - type: file
+        path: /root/*.log
+      - type: file
+        path: /etc/cobbler*
+      - type: file
+        path: /var/log/fuelmenu.log
     slave:
       - type: file
         path: /etc/astute.yaml
