Making Tenant and username disabled
added disabled attribute in openstack.yaml

Change-Id: I5c595ba45433ffbc3eab2ee8d0b3f072d5820592
Closes-bug: 1283703

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -149,6 +149,7 @@
             description: "Username for Administrator"
             weight: 10
             type: "text"
+            disabled: true
           email:
             value: "admin@example.org"
             label: "email"
@@ -161,6 +162,7 @@
             description: "Tenant (project) name for Administrator"
             weight: 30
             type: "text"
+            disabled: true
           password:
             value: "admin"
             label: "password"
