--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -268,6 +268,8 @@
             description: "Requires at least one Storage - Cinder LVM node."
             weight: 10
             type: "checkbox"
+            conflicts:
+              - option: "settings:storage.volumes_ceph"
       generated:
         mysql:
           root_password:
@@ -465,6 +467,9 @@
             description: "If selected, Murano component will be installed"
             weight: 20
             type: "checkbox"
+            depends:
+              - option: "cluster:net_provider"
+                values: "neutron"
           heat:
             value: true
             label: ""
@@ -484,6 +489,8 @@
             description: "Configures Cinder to store volumes in Ceph RBD images."
             weight: 20
             type: "checkbox"
+            conflicts:
+              - option: "settings:storage.volumes_lvm"
           images_ceph:
             value: false
             label: "Ceph RBD for images (Glance)"
@@ -502,6 +509,8 @@
             description: "Configures RadosGW front end for Ceph RBD. This exposes S3 and Swift API Interfaces. If enabled, this option will prevent Swift from installing."
             weight: 40
             type: "checkbox"
+            depends:
+              - option: "settings:storage.images_ceph"
           osd_pool_size:
             value: "2"
             label: "Ceph object replication factor"
