OpenStack Settings tab UI validation
Closes-Bug: #1251232

Change-Id: I047f431e034a4f16884e595e094eb0761fb6d3f3

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -268,6 +268,8 @@
             description: "Requires at least one Storage - Cinder LVM node."
             weight: 10
             type: "checkbox"
+            conflicts:
+              - "settings:storage.volumes_ceph.value": true
       generated:
         mysql:
           root_password:
@@ -465,6 +467,8 @@
             description: "If selected, Murano component will be installed"
             weight: 20
             type: "checkbox"
+            depends:
+              - "cluster:net_provider": "neutron"
           heat:
             value: true
             label: ""
@@ -484,6 +488,8 @@
             description: "Configures Cinder to store volumes in Ceph RBD images."
             weight: 20
             type: "checkbox"
+            conflicts:
+              - "settings:storage.volumes_lvm.value": true
           images_ceph:
             value: false
             label: "Ceph RBD for images (Glance)"
@@ -502,8 +508,10 @@
             description: "Configures RadosGW front end for Ceph RBD. This exposes S3 and Swift API Interfaces. If enabled, this option will prevent Swift from installing."
             weight: 40
             type: "checkbox"
+            depends:
+              - "settings:storage.images_ceph.value": true
           osd_pool_size:
-            value: "2"
+            value: 2
             label: "Ceph object replication factor"
             description: "Configures the default number of object replicas in Ceph. This number must be equal to or lower than the number of deployed 'Storage - Ceph OSD' nodes."
             weight: 70
