Remove requirement for ha_compact to have 3 controllers
Remove ha_compact constraint
Remove tests from declaring cluster mode and set ha_compact as default
Reverse order of multinode and ha_compact, ha_compact should become
 default in menus

This depricates multinode deployments following the logic that all
 ha deployments can now support single controllers.

Further commit will be needed to remove multinode when this is considered
 stable

Change-Id: I8a69897aecc450be4ec5c7b4d786ccc1c2fd93aa
Implements: blueprint single-controller-ha

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -4,10 +4,10 @@
   fields:
     state: "available"
     modes_metadata:
+      ha_compact:
+        description: "This configuration Deploys OpenStack ready for high availability (HA). Controller services are prepared for HA by setting up a base MySQL/Galera, RabbitMQ and HAProxy so that additional controllers can be deployed NOW, or scaled out LATER. 3 or more controllers are required for a true HA environment."
       multinode:
         description: "In this configuration the OpenStack controller is deployed separately from the compute and cinder nodes. This mode assumes the presence of 1 controller node and 1 or more compute/cinder nodes. You can add more nodes to scale your cloud later."
-      ha_compact:
-        description: "This configuration requires multiple OpenStack controllers (3+) and provides high availability for all OpenStack components, including MySQL/Galera, RabbitMQ, and Cinder, as well as OpenStack API services. Select this configuration if you want to build a production-grade OpenStack cloud with 6 nodes or more."
     roles:
       - controller
       - compute
