--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -1,26 +1,29 @@
 alembic==0.6.2
 amqplib==1.0.2
-anyjson==0.3.1
+amqp>=1.0.13
+anyjson==0.3.3
 argparse==1.2.1
 Babel==1.3
 decorator==3.4.0
 fysom==1.0.11
 iso8601==0.1.8
+importlib>=1.0.0
 Jinja2==2.7
 jsonschema==2.0.0
-kombu==2.1.8
+kombu==2.5.14
 Mako==0.9.1
 MarkupSafe==0.18
 netaddr==0.7.10
 netifaces==0.8
 oslo.config==1.2.1
 Paste==1.7.5.1
-psycopg2==2.4.6
-pycrypto==2.6
+psycopg2==2.5.1
+pycrypto==2.6.1
 PyYAML==3.10
 Shotgun==0.1.0
-simplejson==2.6.2
-SQLAlchemy==0.7.8
+simplejson==3.3.0
+SQLAlchemy==0.8.2
 web.py==0.37
 wsgilog==0.3
 wsgiref==0.1.2
+pytz>=0a
