Allocate all free space to single volume group
In case we have volume that configured to allocate_size=min
it wont allocate all free space even if no other groups present on node

Change-Id: I32fdbae16d6ace271805eaffc7d2e042f9ae2a38
Closes-bug: #1295717

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -387,6 +387,8 @@
           - {allocate_size: "min", id: "os"}
           - {allocate_size: "min", id: "cephjournal"}
           - {allocate_size: "full-disk", id: "ceph"}
+        controller_ceph_for_image:
+          - {allocate_size: 'all', id: 'os'}
       volumes:
         - id: "ceph"
           type: "partition"
