Support of setting "values" restrictions (dependencies, conflicts)
Closes-Bug:#1301934

Change-Id: Ia7fd14285b4b15039467f0770d51f61db11e2381

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -199,6 +199,8 @@
               - data: "qemu"
                 label: "QEMU"
                 description: "Choose this type of hypervisor if you run OpenStack on virtual hosts."
+                depends:
+                  - "settings:common.auto_assign_floating_ip.value": true
             label: "Hypervisor type"
             weight: 30
             type: "radio"
